# ComfyUI-FunAudioBreezyVoice

./: README.md  __init__.py  pyproject.toml  requirements.txt
assets/: sample.flac
funaudio_utils/: cosyvoice_plus.py  download_models.py  inspiremusic_helper.py  多音字纠正配置.txt
inspiremusic/cli/: inference.py  inspiremusic.py
inspiremusic/transformer/: qwen_encoder.py
inspiremusic/utils/: audio_utils.py
nodes/: breezyvoice_nodes.py  cosyvoice_nodes.py  inspiremusic_nodes.py  sensevoice_nodes.py
workflow/: BreezyVoiceExample.json  CV2Multilang.json  CV2语音控制.json  CV2跨语言克隆.json  CV2音色克隆.json  CVVoiceControl.json  CV语音控制.json  CV语音识别.json  CV跨语言克隆.json  CV音色使用.json  CV音色克隆.json  CV预训练音色.json  IMContinue.json  IM音乐延续.json  IM音乐生成.json  SDA文生音乐.json  SV语音识别.json
