[project]
name = "funaudiobreezyvoice"
description = "FunAudio Fork For BreezyVoice Supporting Chunk And FP16"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["conformer", "diffusers", "grpcio", "grpcio-tools", "hydra-core", "HyperPyYAML", "inflect", "librosa", "lightning", "matplotlib", "modelscope", "networkx", "omegaconf", "openai-whisper", "protobuf", "pydantic", "rich", "soundfile", "tensorboard", "wget", "gdown", "pyarrow", "jieba", "pypinyin", "pydub", "audiosegment", "srt", "ffmpeg-python", "funasr>=1.1.3", "huggingface", "huggingface_hub", "pyworld", "accelerate", "julius", "importlib_resources"]

[project.urls]
Repository = "https://github.com/dseditor/ComfyUI-FunAudioBreezyVoice"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "dseditor"
DisplayName = "ComfyUI-FunAudioBreezyVoice"
Icon = ""
includes = []
